<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ga.vihanggarud.www.quizapp.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/quizlogo"
        android:layout_margin="16dp"
        android:contentDescription="@string/logo"
         />

    <TextView
        android:id="@+id/highScore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/highScore"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logo"
        android:layout_marginTop="74dp" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/buttonColor"
        android:text="@string/start" />

</RelativeLayout>
